--- a/html/exercise04/template.html
+++ b/html/exercise04/template.html
@@ -1,23 +1,11 @@
 <!DOCTYPE html>
-
-<html>
-
-<!-- You can add any meta elements you'd like to in the header. -->
-
+<html lang="en">
 <head>
-	<meta charset="utf-8" />
-	<meta name="author" content="" />
-	<meta name="description" content="" />
-	<title></title>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Document</title>
 </head>
-
-<!-- Remember to use /semantic/ HTML - elements have meaning, so be sure to pick the element which matches your purpose! -->
-
 <body>
-	<main></main>
+	
 </body>
-
-<!-- The footer is usually where you add the date the page was created. It isn't a rule, more of a pattern most sites use. -->
-<footer></footer>
-
 </html>
