--- a/html/exercise03/link-template.html
+++ b/html/exercise03/link-template.html
@@ -1,14 +1,12 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en-US">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width" />
+    <title></title>
+  </head>
 
-<head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width">
-	<title>My test page</title>
-</head>
-
-<body>
-	<p>This is my page</p>
-</body>
-
+  <body>
+    <p>This is my page about [fill in the blank]</p>
+  </body>
 </html>
