--- a/html/exercise05/template.html
+++ b/html/exercise05/template.html
@@ -1,15 +1,48 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
+    <style>
+      #form-result {
+        font-family: monospace;
+      }
+      input {
+        display: block;
+      }
+    </style>
+  </head>
+  <body>
     <main>
-        <form>
-            <!-- Put your form in here. Be sure to include the proper form controls! -->
-        </form>
+      <section id="form-elements">
+        <h2>Form elements</h2>
+        <!-- Create a list of the elements that are inside the form. -->
+      </section>
+      <section id="form-attributes">
+        <h2>Form attributes</h2>
+        <!-- create a list of the attributes you see on the form element in the instructions document. -->
+      </section>
+      <h2>Your Form</h2>
+      <form id="form-example">
+        <!-- Put your form in here. Be sure to include the proper form controls! -->
+      </form>
+      <h2>Your results:</h2>
+      <pre id="form-result"></pre>
     </main>
-</body>
+    <script>
+      document
+        .getElementById(`form-example`)
+        .addEventListener("submit", (event) => {
+          event.preventDefault();
+          console.log(event.target);
+          const data = new FormData(event.target);
+          document.getElementById(`form-result`).textContent = JSON.stringify(
+            Object.fromEntries(data),
+            undefined,
+            2,
+          );
+        });
+    </script>
+  </body>
 </html>
