Add ids to inputs

--- a/html/exercise05/template.html
+++ b/html/exercise05/template.html
@@ -26,11 +26,11 @@
       <h2>Your Form</h2>
       <form id="form-example">
         <label for="name">Enter name (required)</label>
-        <input type="text" name="name" placeholder="Brian Bennett" required />
+        <input type="text" name="name" id="name" placeholder="Brian Bennett" required />
         <label for="email">Enter email (required)</label>
-        <input type="email" name="email" placeholder="you@example.com" required />
+        <input type="email" name="email" id="email" placeholder="you@example.com" required />
         <label for="urgency">Urgency</label>
-        <input type="range" name="urgency" value="50" />
+        <input type="range" name="urgency" id="urgency" value="50" />
         <button type="submit">Submit</button>
       </form>
       <h2>Your results:</h2>
