new ex02 assignment details

--- a/css/ex02/index.html
+++ b/css/ex02/index.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pets</title>
+    <title>CSS02 - id and class selectors</title>
 
-    <!-- Link your CSS file here. -->
+    <!-- Link your CSS file here -->
 
 </head>
 
@@ -19,19 +19,19 @@
         <hr />
         <section>
             <div>
-                <h3>Toy Story</h3>
+                <p>Toy Story</p>
                 <p>A cowboy has to deal with an astronaut</p>
             </div>
             <div>
-                <h3>A Bug's Life</h3>
+                <p>A Bug's Life</p>
                 <p>An ant defeats some grasshoppers.</p>
             </div>
             <div>
-                <h3>Toy Story 2</h3>
+                <p>Toy Story 2</p>
                 <p>The cowboy is stolen. The astronaut saves him.</p>
             </div>
             <div>
-                <h3>Monster's Inc</h3>
+                <p>Monster's Inc</p>
                 <p>Mosters don't have to be scary.</p>
             </div>
         </section>
