--- a/css/ex04/index.html
+++ b/css/ex04/index.html
@@ -22,7 +22,7 @@
         </header>
         <section id="task2">
             <div class="task2-box">I use the standard box model.</div>
-            <div class="task2-box alternate">I use the alternate box model.</div>
+            <div class="alternate">I use the alternate box model.</div>
         </section>
         <section id="task3">
             <div class="task3-box">I am a box that needs to be made prettier. Follow the instructions for how to apply my styles.</div>
